--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/LambdaSchool/mongo-iv.git"
   },
-  "keywords": ["mongo"],
+  "keywords": [
+    "mongo"
+  ],
   "author": "Lambda School",
   "license": "ISC",
   "bugs": {
@@ -18,11 +20,11 @@
   },
   "homepage": "https://github.com/LambdaSchool/mongo-iv#readme",
   "devDependencies": {
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.17.3"
   },
   "dependencies": {
     "express": "^4.16.3",
     "helmet": "^3.12.0",
-    "mongoose": "^5.0.10"
+    "mongoose": "^5.0.14"
   }
 }
